# nugie-kimi-k3

./: .gitignore  README.md  codeparrot_data.py  evaluate.py  kimi_k3_gdn2.py  kimi_linear_gdn2.py  pyproject.toml  requirements.txt  train.py
.github/workflows/: ci.yml
configs/: base.yaml  colab_t4.yaml  h200.yaml  kaggle_2xt4.yaml  tiny.yaml
gated_deltanet_2/: core.py  layer.py
multi_latent_attention/: attention.py  latent_moe.py  moe.py
notebooks/: colab_t4.ipynb  colab_train_t4.ipynb  kaggle_2xt4.ipynb  kaggle_t4.ipynb  kaggle_train_2xt4.ipynb
pipeline/: checkpointing.py  config.py  data.py  evaluate.py  optimizer.py  prepare_data.py  tokenizer.py  train.py
tests/: conftest.py  test_data_parallel.py  test_layer.py  test_model.py  test_moe.py  test_pipeline.py  test_rule.py
