[project]
name = "nugie-kimi-k3"
version = "0.1.0"
description = "A from-scratch Kimi K3 architecture recreation in JAX and Flax NNX"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "datasets>=2.19",
    "flax>=0.11",
    "grain>=0.2",
    "jax>=0.6",
    "numpy>=1.26",
    "optax>=0.2.7",
    "orbax-checkpoint>=0.6",
    "pyyaml>=6.0",
    "transformers>=4.40",
]

[project.optional-dependencies]
# JAX publishes NVIDIA wheels for Linux only. These mutually exclusive extras
# keep accelerator packages in the universal lock without polluting CPU installs.
cuda12 = ["jax[cuda12]>=0.6; sys_platform == 'linux'"]
cuda13 = ["jax[cuda13]>=0.6; sys_platform == 'linux'"]

[dependency-groups]
dev = [
    "pyright>=1.1.405",
    "pytest>=8.3",
    "ruff>=0.15",
]

[tool.uv]
package = false
default-groups = ["dev"]
conflicts = [
    [
        { extra = "cuda12" },
        { extra = "cuda13" },
    ],
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
markers = [
    "multi_device: requires at least two JAX devices",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B", "UP"]

[tool.ruff.lint.isort]
known-first-party = [
    "gated_deltanet_2",
    "kimi_k3_gdn2",
    "multi_latent_attention",
    "pipeline",
]

[tool.pyright]
include = [
    "kimi_k3_gdn2.py",
    "gated_deltanet_2",
    "multi_latent_attention",
    "pipeline",
    "tests",
]
exclude = ["notebooks"]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingTypeStubs = false
